Update Growth marketing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Fernando William</strong> Cientista de Dados</a>
+									<a href="index.html" class="logo"><strong>Fernando William</strong> Cientista de Dados / Growth Marketing</a>
 									<ul class="icons">
 										<li><a href="www.twitter.com/fernandowilliam" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="www.instagram.com/fernandowilliam" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
