Update nova secao blog index.html

--- a/index.html
+++ b/index.html
@@ -181,6 +181,30 @@
 										</article>
 									</div>
 								</section>
+								<!-- Section -->
+								<section>
+									<header class="major">
+										<h2>Blog</h2>
+									</header>
+									<div class="posts">
+										<article>
+											<a href="#" class="image"><img src="cao.png" alt="Os 4 Ps do ITSM" /></a>
+											<h3>Os 4 Ps do ITSM</h3>
+											<p>Descrição ou resumo do artigo</p>
+											<ul class="actions">
+												<li><a href="#" class="button">Leia Mais</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="pmp.png" alt="Scrum ou PMP" /></a>
+											<h3>Scrum ou PMP</h3>
+											<p>Descrição ou resumo do artigo</p>
+											<ul class="actions">
+												<li><a href="#" class="button">Leia Mais</a></li>
+											</ul>
+										</article>
+									</div>
+								</section>
 
 								<!-- Contato -->
 								<section>
