--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="/images/cao.jpg" alt="Os 4 Ps do ITSM" /></a>
+											<a href="#" class="image"><img src="images/cao.jpg" alt="Os 4 Ps do ITSM" /></a>
 											<h3>Os 4 Ps do ITSM</h3>
 											<p>Descrição ou resumo do artigo</p>
 											<ul class="actions">
@@ -196,7 +196,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="/images/pmp.jpg" alt="Scrum ou PMP" /></a>
+											<a href="#" class="image"><img src="images/pmp.jpg" alt="Scrum ou PMP" /></a>
 											<h3>Scrum ou PMP</h3>
 											<p>Descrição ou resumo do artigo</p>
 											<ul class="actions">
