--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 										<article>
 											<a href="#" class="image"><img src="/images/cao.jpg" alt="Os 4 Ps do ITSM" /></a>
 											<h3>Os 4 Ps do ITSM</h3>
-											<p>Descrição ou resumo do artigo</p>
+											<p>Descubra os 4 Ps do ITSM: Construindo uma Estratégia Sólida de Gerenciamento de Serviços de TI</p>
 											<ul class="actions">
 												<li><a href="#" class="button">Leia Mais</a></li>
 											</ul>
@@ -198,7 +198,7 @@
 										<article>
 											<a href="#" class="image"><img src="/images/pmp.jpg" alt="Scrum ou PMP" /></a>
 											<h3>Scrum ou PMP</h3>
-											<p>Descrição ou resumo do artigo</p>
+											<p>Scrum vs PMP: Qual a Melhor Abordagem Para o Seu Projeto?</p>
 											<ul class="actions">
 												<li><a href="#" class="button">Leia Mais</a></li>
 											</ul>
