--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+			.posts {
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+				margin-top: -2em;
+			}
 	</head>
 	<body class="is-preload">
 
